--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@middy/do-not-wait-for-empty-event-loop": "^1.5.2",
     "aws-sdk": "^2.832.0",
     "dotenv": "^8.2.0",
+    "hsts": "^2.2.0",
     "locutus": "^2.0.14",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
